syntax = "proto3";

option csharp_namespace = "ProductApp.BusinessLogic.Protos";

package product;

service ProductGrpcService {
  rpc GetAllProducts (EmptyRequest) returns (ProductListResponse);
  rpc GetProduct (ProductIdRequest) returns (ProductResponse);
  rpc CreateProduct (ProductRequest) returns (ProductResponse);
  rpc UpdateProduct (ProductRequest) returns (ProductResponse);
  rpc DeleteProduct (ProductIdRequest) returns (DeleteResponse);
}

message EmptyRequest {
}

message ProductIdRequest {
  int32 id = 1;
}

message ProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message ProductResponse {
  bool success = 1;
  string message = 2;
  int32 id = 3;
  string name = 4;
  string description = 5;
  double price = 6;
}

message ProductListResponse {
  repeated ProductItem products = 1;
}

message ProductItem {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}